fixed create page visibility

--- a/css/main.css
+++ b/css/main.css
@@ -119,6 +119,5 @@ button {
 }
 
 #createPage {
-    display: none;
     height: 100%;
 }
